solution to first problem

--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -1,8 +1,8 @@
 div {
   background-color: red;
-  font-color: white;
+  color: white;
   font-size: 32px;
-  text-alignement: center;
-  font: bold;
+  text-align: center;
+  font-weight: bold;
 }
   
