--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,10 +2,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.para,
-.small-para {
+.para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
+  font-size: 22px;
 }
 
 .small-para {
@@ -13,30 +13,28 @@ body {
   font-weight: 800;
 }
 
-.para {
-  font-size: 22px;
-}
-
 .confirm {
-  background: green;
+  background-color: green;
   color: white;
   font-weight: bold;
 } 
 
-.button {
+.cancel{
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
+}
+.button{
   font-size: 20px;
 }
 
-.child {
+div.child{
   color: rgb(0, 0, 0);
-  font-weight: 800;
   font-size: 14px;
+  font-weight: 800;
 }
 
-div.text {
+div{
   color: rgb(0, 0, 0);
-  font-size: 22px;
   font-weight: 100;
+  font-size: 22px;
 }
