--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 10px 5px 10px 5px;
+  
 }
 
 .profile-image {
@@ -27,6 +30,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin: 3px 0px 3px 3px;
 }
 
 button {
@@ -45,4 +49,16 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+.links {
+  display: flex;
+  gap: 10px;
+  padding: 0px 10px 0px 10px;
+}
+.notifications {
+  margin: 13px 13px 13px auto;
+}
+.profile-image{
+  margin: 3px;
 }
