--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -10,6 +12,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  align-self: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +26,12 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+.descriptions {
+  display: flex;
+  flex-direction:row;
+  gap: 50px;
+  padding: 30px 400px 0px 400px;
+  align-items: center;
+  justify-content:center;
 }
