--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 10px;
+  gap:10px;
 }
 
 .icon {
@@ -35,12 +38,33 @@ body {
   justify-content: center;
 }
 
+.level2 {
+  display:flex;
+  flex-direction: column;
+  width:420px;
+  padding: 5px 5px 0 0px;
+}
+
+.level1 {
+  width: 420px;
+  display:flex;
+
+}
+
+.header {
+  font-weight: 1000 ;
+  font-size: 20px;
+}
 .close-button {
   background: #eee;
   border-radius: 50%;
   color: #888;
-  font-weight: 400;
-  font-size: 16px;
+  font-weight: bold;
+  font-size: 14
+  
+  
+  
+  px;
   height: 24px;
   width: 24px;
   display: flex;
@@ -48,6 +72,11 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin-left: auto;
+}
+
+.text {
+  margin: 10px 0 10px 0;
 }
 
 button {
