--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -24,4 +26,38 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: grey;
+}
+ul {
+  list-style-type: none;
+}
+.header, .footer{
+  display: flex;
+}
+.footer {
+  margin-top: auto;
+  background-color: lightgrey;
+}
+.right-links{
+  margin: 5px 5px 5px auto;
+  display: flex;
+  padding: 5px;
+  gap: 10px;
+}
+.left-links {
+  display: flex;
+  padding: 5px;
+  margin: 5px;
+  gap: 10px;
+}
+.content {
+  margin: auto;
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
 }
