--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,64 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 28px;
+  font-weight: 900;
+  align-items: center;
+  padding: 10px;
 }
 
 .footer {
+  margin-top: auto;
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content {
+  display:flex;
+  flex:2;
 }
 
 .sidebar {
+  
   width: 300px;
   background: royalblue;
-  box-sizing: border-box;
+}
+
+.tiles {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 50px;
+  gap: 25px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 352px;
+  height: 352px;
+  padding: 10px;
+}
+ul {
+  list-style: none;
+  padding-left: 5px;
+  font-size: 18px;
+  gap: 16px;
+  display: flex;
+  flex-direction: column;
+}
+a {
+  text-decoration: none;
+  color: white;
 }
